@@ -99,7 +99,7 @@ struct _GslLoader
   const gchar **extensions;	/* e.g.: "mp3", "ogg" or "bsewave" */
   const gchar **mime_types;	/* e.g.: "audio/x-mpg3" or "audio/x-wav" */
   GslLoaderFlags flags;
-  const gchar **magic_specs;	/* e.g.: "0 string RIFF\n8 string WAVE\n" or "0 string #BseWave\n" */
+  const gchar **magic_specs;	/* e.g.: "0 string RIFF\n8 string WAVE\n" or "0 string #BseWave1\n" */
 
   gint   priority;   /* -100=high, +100=low, 0=default */
 
