@@ -819,7 +819,7 @@ _gsl_init_loader_gslwave (void)
 {
   static const gchar *file_exts[] = { "bsewave", NULL, };
   static const gchar *mime_types[] = { "audio/x-bsewave", NULL, };
-  static const gchar *magics[] = { "0 string #BseWave", "0 string #GslWave", NULL, };
+  static const gchar *magics[] = { "0 string #BseWave1", NULL, };
   static GslLoader loader = {
     "BseWave",
     file_exts,
